Bug 81891 - Meaningless "setup_efi_pci() failed!" on boot
Summary: Meaningless "setup_efi_pci() failed!" on boot
Status: RESOLVED CODE_FIX
Alias: None
Product: EFI
Classification: Unclassified
Component: Boot (show other bugs)
Hardware: x86-64 Linux
: P1 low
Assignee: EFI Virtual User
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-08-07 22:24 UTC by Andreas Reis
Modified: 2014-09-28 21:49 UTC (History)
5 users (show)

See Also:
Kernel Version: 3.17-git
Subsystem:
Regression: No
Bisected commit-id:


Attachments
boot failure (1.19 MB, image/jpeg)
2014-08-08 01:52 UTC, Andreas Reis
Details
dmesg (77.79 KB, text/plain)
2014-08-14 20:48 UTC, Andreas Reis
Details
dmesg desktop (73.84 KB, text/plain)
2014-08-14 23:29 UTC, Andreas Reis
Details
kernel panic core dump after "setup_efi_pci() failed" (3.39 MB, image/jpeg)
2014-08-15 17:01 UTC, Jaret Flores
Details
3.17-rc6 dmesg from Acer Aspire E5-571-563B (70.64 KB, application/octet-stream)
2014-09-26 18:21 UTC, Adam Drew
Details

Description Andreas Reis 2014-08-07 22:24:58 UTC
With 3.17-git (x64, self compiled) I'm now getting the newly introduced "setup_efi_pci() failed!" message on every boot, both on my laptop and desktop (each using gummiboot). But that's it, the boot just continues as before.

(On my desktop. On the laptop, it actually aborts with "initramfs unpacking failed", but I'm inclined to blame that on something else.)
Comment 1 Andreas Reis 2014-08-08 01:50:45 UTC
Correction, after bisecting it turns out that it actually is the recent x86-efi-for-linus branch merge that causes the laptop to fail to boot:

https://git.kernel.org/cgit/linux/kernel/git/torvalds/linux.git/commit/?id=76f09aa464a1913efd596dd0edbf88f932fde08c

Attached is a picture of the message it prints.

In case it matters, laptop is a Clevo W840SU, mobo of the desktop a Gigabyte G1.Sniper M5 (bios F9a).
Comment 2 Andreas Reis 2014-08-08 01:52:08 UTC
Created attachment 145621 [details]
boot failure
Comment 3 Matt Fleming 2014-08-13 12:44:46 UTC
Andreas, it would be helpful if you could track down exactly which commit introduces this regression.

The commit that introduced the "setup_efi_pci() failed" message is this one, but I doubt that it's directly responsible for your issues,

http://git.kernel.org/cgit/linux/kernel/git/torvalds/linux.git/commit/arch/x86/boot/compressed/eboot.c?id=fb86b2440de0ec10fe0272eb19d262ae7a01adb8
Comment 4 Andreas Reis 2014-08-14 01:56:07 UTC
Alright, the commit that causes my laptop to fail is "x86/efi: Support initrd loaded above 4G", checked both by bisection and reverting it from the current HEAD.

https://git.kernel.org/cgit/linux/kernel/git/tip/tip.git/commit/?h=x86-efi-for-linus&id=4bf7111f50167133a71c23530ca852a41355e739

Still getting the "setup_efi_pci() failed!".

Laptop has 8G RAM and the desktop 16G. Also, the laptop uses dm-crypt drive encryption.
Comment 5 Matt Fleming 2014-08-14 12:21:55 UTC
Andreas, thanks for doing the bisect. Could you please provide dmesgs for both of your machine with a working kernel?

Also, please let me know if the following commit helps (you'll need to add efi=nochunk to your EFI boot stub params),

http://git.kernel.org/cgit/linux/kernel/git/mfleming/efi.git/commit/?h=next&id=1c24a2bef39f041eb578189207240d0457ef0ac3
Comment 6 Andreas Reis 2014-08-14 20:48:05 UTC
Created attachment 146651 [details]
dmesg

Yes, the commit together with efi=nochunk works (kernel at 899552d6). Attached is the resulting dmesg.
Comment 7 Andreas Reis 2014-08-14 23:29:31 UTC
Created attachment 146681 [details]
dmesg desktop

Ups, forgot about the second dmesg. Here it is.
Comment 8 Jaret Flores 2014-08-15 16:59:32 UTC
I pulled from linus' repo yesterday (commit 899552d6e84babd24611fd36ac7051068cb1eb2d) and received this same error message when trying to boot into the kernel.  I was not actually able to boot into the kernel due to kernel panic about not being able to mount the root fs (I'm a newb so am not sure if this is relevant to the specified error).  I did not know how to obtain log data from the boot, so I attached a picture of the kernel panic core dump.  Sorry I am not more help!
Comment 9 Jaret Flores 2014-08-15 17:01:06 UTC
Created attachment 146751 [details]
kernel panic core dump after "setup_efi_pci() failed"
Comment 10 Jaret Flores 2014-08-15 17:03:17 UTC
I should note that it says to 'Please append a correct "root=" boot option', but I do have this kernel parameter set (to root=/dev/sda3).
Comment 11 Matt Fleming 2014-09-11 08:15:20 UTC
Jaret, could you try building a kernel with the following patch?

http://git.kernel.org/cgit/linux/kernel/git/mfleming/efi.git/commit/?h=urgent&id=47226ad4f4cfd1e91ded7f2ec42f83ff1c624663

Hopefully that should fix your boot failure.
Comment 12 Andreas Reis 2014-09-12 09:40:23 UTC
Can't speak for Jaret, but it's working for my laptop, unsurprisingly.
Comment 13 Jaret Flores 2014-09-12 18:47:19 UTC
Gah, I feel like a jerk.  I have actually re-installed Windows on my PC in order to practice .NET programming (I am currently not a programmer but trying to find a programming position).  Odds are I will switch back to Linux in the near future, but I won't be able to test out this patch for a little while.  Thank you so much for responding to my post though. =/
Comment 14 Tom Englund 2014-09-16 15:28:09 UTC
(In reply to Matt Fleming from comment #11)
> Jaret, could you try building a kernel with the following patch?
> 
> http://git.kernel.org/cgit/linux/kernel/git/mfleming/efi.git/commit/
> ?h=urgent&id=47226ad4f4cfd1e91ded7f2ec42f83ff1c624663
> 
> Hopefully that should fix your boot failure.

with that patch my computer boots however showing the "setup_efi_pci() failed" message. without it i get something mentioning initramfs containing junk and stops there.

this is on a desktop with the motherboard MSI Z77A-G45 Socket-1155, with kernel 3.17-rc5
Comment 15 Adam Drew 2014-09-26 18:21:08 UTC
When running on x86_64 3.17-rc6 compiled from git, my Asus laptop displays "setup_efi_pci() failed" and then immediately reboots. The system boots fine on 3.16. I'll attach dmesg from booting into 3.16. There's no additional debug data displayed. It looks like 3.17-rc6 contains Matt's patch. I'll try and figure out what the last 3.17 rc I can boot into is and bisect, but if there's anything additional I can do to assist debugging please let me know.
Comment 16 Adam Drew 2014-09-26 18:21:42 UTC
Created attachment 151981 [details]
3.17-rc6 dmesg from Acer Aspire E5-571-563B
Comment 17 Andreas Reis 2014-09-26 18:24:18 UTC
Maybe try with the revert contained in rc7:
https://git.kernel.org/cgit/linux/kernel/git/torvalds/linux.git/commit/?id=f3670394c29ff3730638762c1760fd2f624e6d7b

Sounds like the same issue.
Comment 18 Adam Drew 2014-09-26 20:50:05 UTC
Rebuilt on the latest and it works. Still displays the setup_pci_efi error, but it continues to boot. Thanks.
Comment 19 Andreas Reis 2014-09-28 21:49:38 UTC
Given the fixes for both the boot failures and the "failed" message (with "x86/efi: Delete misleading efi_printk() error message" in rc7), I'll take the liberty of closing the bug. Thanks, devs!

Note You need to log in before you can comment on or make changes to this bug.